crates/ars-components/src/input/textarea/snapshots/ars_components__input__textarea__tests__textarea_description.snap
---
source: crates/ars-components/src/input/textarea/mod.rs
expression: "snapshot_attrs(&service(props()).connect(&|_| {}).description_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "description",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "textarea",
            ),
        ),
        (
            Id,
            String(
                "bio-field-description",
            ),
        ),
    ],
    styles: [],
}
