crates/ars-components/src/input/textarea/snapshots/ars_components__input__textarea__tests__textarea_form_constraints.snap
---
source: crates/ars-components/src/input/textarea/mod.rs
expression: "snapshot_attrs(&service(props().value(\"Hello\").placeholder(\"Biography\").max_length(500).min_length(10).autocomplete(\"off\").name(\"bio\").form(\"profile\").required(true).rows(6).cols(40)).connect(&|_|\n{}).textarea_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "textarea",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "textarea",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "bio-field-label",
            ),
        ),
        (
            Dir,
            String(
                "ltr",
            ),
        ),
        (
            Id,
            String(
                "bio-field-textarea",
            ),
        ),
        (
            AutoComplete,
            String(
                "off",
            ),
        ),
        (
            Cols,
            String(
                "40",
            ),
        ),
        (
            Form,
            String(
                "profile",
            ),
        ),
        (
            MaxLength,
            String(
                "500",
            ),
        ),
        (
            MinLength,
            String(
                "10",
            ),
        ),
        (
            Name,
            String(
                "bio",
            ),
        ),
        (
            Placeholder,
            String(
                "Biography",
            ),
        ),
        (
            Required,
            Bool(
                true,
            ),
        ),
        (
            Rows,
            String(
                "6",
            ),
        ),
        (
            Value,
            String(
                "Hello",
            ),
        ),
    ],
    styles: [
        (
            Resize,
            "vertical",
        ),
    ],
}
