crates/ars-components/src/input/textarea/snapshots/ars_components__input__textarea__tests__textarea_label.snap
---
source: crates/ars-components/src/input/textarea/mod.rs
expression: "snapshot_attrs(&service(props()).connect(&|_| {}).label_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "label",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "textarea",
            ),
        ),
        (
            Id,
            String(
                "bio-field-label",
            ),
        ),
        (
            For,
            String(
                "bio-field-textarea",
            ),
        ),
    ],
    styles: [],
}
